--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # 描述/签名
 name: 一把甘蔗渣
-description: 三径已荒 松菊不存
+description: 你是我最爱少年 你是我最远家园
 
 # 输入你的网站域名（如果你没有添加自己的域名，而是直接用GitHub pages分配的域名的话可以省略）
 url: 
