--- a/_config.yml
+++ b/_config.yml
@@ -59,14 +59,14 @@ footer-links:
   instagram: #https://instagram.com/<>
   linkedin: #https://www.linkedin.com/in/<>
   pinterest: #https://www.pinterest.com/<>
-  rss: #随便填点啥RSS就能用了
+  rss: rss
   stackoverflow: # http://stackoverflow.com/<>
   tumblr: # https://<username>.tumblr.com
   twitter: # https://www.twitter.com/<your_twitter_username> 
   youtube: # channel/<your_long_string> or user/<user-name>
 
 # 站点页脚的文字
-footer-text: Copyright (c) 一把甘蔗渣
+footer-text: Copyright (c) 2020 一把甘蔗渣
 
 #
 # 评论，注意，请不要同时添加多种不同的评论区
